--- a/index.html
+++ b/index.html
@@ -19,13 +19,13 @@
 
     </style>
 
- <title>detect</title>
+ <title>overlay</title>
 </head>
 
 <body>
 
     <div id="bg">
-      <canvas id="canvas"></canvas>
+      <video muted playsinline id="over" src="./plane.mp4"></video>
       <video muted playsinline id="video" ></video>
     </div>
 
