--- a/index.html
+++ b/index.html
@@ -25,7 +25,8 @@
 <body>
 
     <div id="bg">
-      <video muted playsinline id="over" src="./plane.mp4"></video>
+      <video muted playsinline id="plane" src="./plane.mp4"></video>
+      <canvas id="canvas"></canvas>
       <video muted playsinline id="video" ></video>
     </div>
 
