--- a/index.html
+++ b/index.html
@@ -27,7 +27,9 @@
     <div id="bg">
 
       <video muted playsinline id="plane" src="./plane.mp4"></video>
+      <video muted playsinline id="plane_alpha" src="./plane_alpha.mp4"></video>
       <canvas id="canvas"></canvas>
+      <canvas id="canvas_alpha"></canvas>
       <video muted playsinline id="video" ></video>
     </div>
 
