--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
 
 
-      #video
+      .pos
       {
         left:0px;
         position:fixed;
@@ -15,6 +15,7 @@
         height: 720px;
         z-index:2;
       }
+
 
 
     </style>
@@ -25,12 +26,11 @@
 <body>
 
     <div id="bg">
-
-      <video muted playsinline id="plane" src="./plane.mp4"></video>
+      <canvas id="canvas" class="pos"></canvas>
+      <video muted playsinline id="video" class="pos"></video>
+      <video muted playsinline id="plane" src="./plane.mp4" class="pos"></video>
       <video muted playsinline id="plane_alpha" src="./plane_alpha.mp4"></video>
-      <canvas id="canvas"></canvas>
       <canvas id="canvas_alpha"></canvas>
-      <video muted playsinline id="video" ></video>
     </div>
 
 
