--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <div id="bg">
       <canvas id="canvas" class="pos"></canvas>
       <video muted playsinline id="video" class="pos"></video>
-      <video muted playsinline id="plane" src="./plane.mp4" class="pos"></video>
+      <video muted playsinline id="plane" src="./plane.mp4"></video>
       <video muted playsinline id="plane_alpha" src="./plane_alpha.mp4"></video>
       <canvas id="canvas_alpha"></canvas>
     </div>
