--- a/index.html
+++ b/index.html
@@ -6,14 +6,22 @@
       <style>
 
 
-
-      .pos
+      #canvas
       {
         left:0px;
         position:fixed;
         width: 1280px;
         height: 720px;
-        z-index:2;
+        z-index:2
+      }
+
+      #video
+      {
+        left:0px;
+        position:fixed;
+        width: 1280px;
+        height: 720px;
+        z-index:1
       }
 
 
