--- a/index.html
+++ b/index.html
@@ -12,10 +12,19 @@
         position:fixed;
         width: 1280px;
         height: 720px;
-        z-index:2
+        z-index:3
       }
 
       #video
+      {
+        left:0px;
+        position:fixed;
+        width: 1280px;
+        height: 720px;
+        z-index:2
+      }
+
+      #canvas_alpha
       {
         left:0px;
         position:fixed;
