--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 
 <body>
 
+<!--背景動画-->
+<video width="1280" height="720"  muted playsinline id="bgvideo"></video>
+
 <!--//元素材-->
 <canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
 
@@ -24,8 +27,7 @@
     <source src="./plane.mp4"  /></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
-<!--背景動画-->
-<video width="1280" height="720" class="video--top loop" muted playsinline id="bgvideo"></video>
+
 
 
 <script type="text/javascript" src="./overlay.js"></script>
