--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
 <meta charset="UTF-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
-      <style>
+<style>
 
+      #output
+      {
+        left:0px;
+        position:fixed;
+        z-index:2;
+      }
+      #bgvideo
+      {
+        left:0px;
+        position:fixed;
+        z-index:1;
+      }
 
-    </style>
+</style>
 
  <title>overlay</title>
 </head>
