--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
-<video class="" id="video" muted playsinline style="display:none" loop>
+<video class="" id="video" muted playsinline style="display:none">
     <source src="./plane.mp4"  /></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
