--- a/index.html
+++ b/index.html
@@ -9,12 +9,16 @@
       {
         left:0px;
         position:fixed;
+        width: 1280px;
+        height: 720px;
         z-index:2;
       }
       #bgvideo
       {
         left:0px;
         position:fixed;
+        width: 1280px;
+        height: 720px;
         z-index:1;
       }
 
