--- a/index.html
+++ b/index.html
@@ -21,22 +21,6 @@
         height: 720px;
         z-index:2;
       }
-      #buffer
-      {
-        left:0px;
-        position:fixed;
-        width: 1280px;
-        height:1440px;
-        z-index:1;
-      }
-      #video
-      {
-        left:0px;
-        position:fixed;
-        width: 1280px;
-        height:720px;
-        z-index:1;
-      }
 
 </style>
 
@@ -53,10 +37,10 @@
 <video  muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
-<canvas style="display:none" id="buffer"></canvas>
+<canvas style="visibility: hidden;" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
-<video class="" id="video" muted playsinline style="display:none">
+<video class="" id="video" muted playsinline style="visibility: hidden;">
     <source src="./plane.mp4"  /></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
