--- a/index.html
+++ b/index.html
@@ -5,11 +5,17 @@
 <meta name="viewport" content="width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1,user-scalable=no"/>
 <style>
 
-
+      #output
+      {
+        left:0px;
+        position:fixed;
+        width: 1280px;
+        height: 720px;
+        z-index:3;
+      }
       #bgvideo
       {
         left:0px;
-        top:0px;
         position:fixed;
         width: 1280px;
         height: 720px;
