--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         position:fixed;
         width: 1280px;
         height: 720px;
-        z-index:3;
+        z-index:2;
       }
       #bgvideo
       {
@@ -19,7 +19,7 @@
         position:fixed;
         width: 1280px;
         height: 720px;
-        z-index:2;
+        z-index:1;
       }
 
 </style>
@@ -29,14 +29,15 @@
 
 <body>
 
-<!--//元素材-->
-<canvas style="display:none" id="buffer"></canvas>
 
 <!--Output canvas (combines mask with video)-->
 <canvas class="video__output" id="output"></canvas>
 
 <!--背景動画-->
 <video  muted playsinline id="bgvideo"></video>
+
+<!--//元素材-->
+<canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
 <video class="" id="video" muted playsinline style="display:none">
