--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
       #bgvideo
       {
         left:0px;
+        width: 1280px;
+        height: 720px;
         position:fixed;
         z-index:1;
       }
