--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 <canvas class="video__output " width="1280" height="720" id="output"></canvas>
 
 <!--背景動画-->
-<video width="1280" height="720"  muted playsinline id="bgvideo"></video>
+<video   muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
 <canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
