--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 
 <div id="group">
 <!--Output canvas (combines mask with video)-->
-<canvas class="video__output " width="1280" height="720" id="output"></canvas>
+<canvas class="video__output "  id="output"></canvas>
 
 <!--背景動画-->
 <video   muted playsinline id="bgvideo"></video>
