--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
       #output
       {
         left:0px;
+                width: 1280px;
+        height: 720px;
         position:fixed;
         z-index:2;
       }
