--- a/index.html
+++ b/index.html
@@ -8,16 +8,12 @@
       #output
       {
         left:0px;
-                width: 1280px;
-        height: 720px;
         position:fixed;
         z-index:2;
       }
       #bgvideo
       {
         left:0px;
-        width: 1280px;
-        height: 720px;
         position:fixed;
         z-index:1;
       }
@@ -32,16 +28,16 @@
 
 <div id="group">
 <!--Output canvas (combines mask with video)-->
-<canvas class="video__output "  id="output"></canvas>
+<canvas class="video__output " width="1280" height="720" id="output"></canvas>
 
 <!--背景動画-->
-<video   muted playsinline id="bgvideo"></video>
+<video width="1280" height="720"  muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
 <canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
-<video class="" id="video" muted playsinline style="display:none" src="./plane.mp4" ></video>
+<video width="1280" height="720" id="video" muted playsinline style="display:none" src="./plane.mp4" ></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 </div>
 
