--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
 
       #group
       {
+        margin:auto;
         position:fixed;
       }
 
       #output
       {
-        left:0px;
+        margin: auto;
         position:fixed;
         z-index:2;
       }
       #bgvideo
       {
-        left:0px;
+        margin: auto;
         position:fixed;
         z-index:1;
       }
