--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       }
       #bgvideo
       {
-        margin: auto;
+        margin: 0 auto;
         position:fixed;
         z-index:1;
       }
