--- a/index.html
+++ b/index.html
@@ -7,16 +7,20 @@
 
       #group
       {
+        left:0px;
         position:fixed;
+        z-index:1;
       }
 
       #output
       {
+        left:0px;
         position:fixed;
         z-index:2;
       }
       #bgvideo
       {
+        left:0px;
         position:fixed;
         z-index:1;
       }
@@ -35,14 +39,14 @@
 
 <!--背景動画-->
 <video width="1280" height="720"  muted playsinline id="bgvideo"></video>
-</div>
+
 <!--//元素材-->
 <canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
 <video width="1280" height="720" id="video" muted playsinline style="display:none" src="./plane.mp4" ></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
-
+</div>
 
 
 
