--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
 <video width="1280" height="720"  muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
-<canvas style="display:none" width="1280" height="1440" id="buffer"></canvas>
+<canvas  width="1280" height="1440" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
-<video width="1280" height="720" id="video" muted playsinline style="display:none" src="./plane.mp4" ></video>
+<video width="1280" height="720" id="video" muted playsinline src="./plane.mp4" ></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 </div>
 
