--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 
       #output
       {
+        top:0px;
         left:0px;
         position:fixed;
         z-index:2;
       }
       #bgvideo
       {
+        top:0px;
         left:0px;
         position:fixed;
         z-index:1;
@@ -35,13 +37,13 @@
 
 <div id="group">
 <!--Output canvas (combines mask with video)-->
-<canvas class="video__output " width="1280" height="720" id="output"></canvas>
+<canvas class="video__output "  id="output"></canvas>
 
 <!--背景動画-->
-<video width="1280" height="720"  muted playsinline id="bgvideo"></video>
+<video   muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
-<canvas  width="1280" height="1440" id="buffer"></canvas>
+<canvas  width="1280" height="1000" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
 <video width="1280" height="720" id="video" muted playsinline src="./plane.mp4" ></video>
