--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
 
 <div id="group">
 <!--Output canvas (combines mask with video)-->
-<canvas class="video__output " width="1280" height="720" id="output"></canvas>
+<canvas class="video__output "  id="output"></canvas>
 
 <!--背景動画-->
-<video width="1280" height="720"  muted playsinline id="bgvideo"></video>
+<video   muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
 <canvas  width="1280" height="1440" id="buffer"></canvas>
