--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
 
 <div id="group">
 <!--Output canvas (combines mask with video)-->
-<canvas class="video__output "  id="output"></canvas>
+<canvas class="video__output " width="500" height="300" id="output"></canvas>
 
 <!--背景動画-->
-<video   muted playsinline id="bgvideo"></video>
+<video width="500" height="300"  muted playsinline id="bgvideo"></video>
 
 <!--//元素材-->
-<canvas  width="1280" height="1440" id="buffer"></canvas>
+<canvas  width="500" height="600" id="buffer"></canvas>
 
 <!--//buffer canvas uses this video to extract data-->
 <video width="1280" height="720" id="video" muted playsinline src="./plane.mp4" ></video>
