--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       }
       #bgvideo
       {
-        left:0px;
+        margin: 0 auto;
         position:fixed;
         z-index:1;
       }
