--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@
       }
       #bgvideo
       {
-        margin: 0 auto;
+        width: 300px;
+        height: 500px;
+        margin-right: auto;
+　　　　　margin-left : auto;
         position:fixed;
         z-index:1;
       }
