--- a/index.html
+++ b/index.html
@@ -63,12 +63,12 @@
 
 <div id="ov">
 <!--overlay動画output-->
-<canvas class="video__output "  id="output"></canvas>
+<canvas class="video__output " width="850" height="480" id="output"></canvas>
 
 <!--背景動画。カメラ-->
 
 <div id="bk">
-<video   muted playsinline id="bgvideo"></video>
+<video width="300" height="500"  muted playsinline id="bgvideo"></video>
 </div>
 </div>
 
@@ -79,7 +79,7 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video  id="video" muted playsinline src="./plane.mp4" ></video>
+<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" ></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
 
