--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         left:0;
         top:0;
         position:relative;
+        z-index:1;
       }
       #ov
       {
@@ -34,8 +35,16 @@
         margin: auto;
         z-index:1;
       }
+      #output
+      {
 
+        z-index:2;
+      }
+      #bgvideo
+      {
 
+        z-index:1;
+      }
 
 
 </style>
