--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" ></video>
-    <!--type='video/mp4;codecs="avc1.42E01E"'-->
+<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" type='video/mp4;codecs="avc1.42E01E"'></video>
+    <!---->
 
 
 
