--- a/index.html
+++ b/index.html
@@ -74,9 +74,12 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" type='video/mp4;codecs="avc1.42E01E"'></video>
+<video controls width="850" height="480" id="video" muted playsinline ></video>
     <!---->
-
+<video controls>
+  <source src="./plane.mp4" type="video/mp4">
+  I'm sorry; your browser doesn't support HTML5 video in WebM with VP8/VP9 or MP4 with H.264.
+</video>
 
 
 
