--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
 <!--overlay動画-->
 <video controls width="850" height="480" id="video" muted playsinline ></video>
     <!---->
-<video controls>
+<video muted playsinline>
   <source src="./plane.mp4" type="video/mp4">
-  I'm sorry; your browser doesn't support HTML5 video in WebM with VP8/VP9 or MP4 with H.264.
 </video>
 
 
