--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <!--overlay動画-->
 <video controls width="850" height="480" id="video" muted playsinline ></video>
     <!---->
-<video muted playsinline>
+<video id="bgvideo" muted playsinline>
   <source src="./plane.mp4" type="video/mp4">
 </video>
 
