--- a/index.html
+++ b/index.html
@@ -74,11 +74,9 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video controls width="850" height="480" id="video" muted playsinline ></video>
-    <!---->
-<video id="bgvideo" muted playsinline>
-  <source src="./plane.mp4" type="video/mp4">
-</video>
+<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" type="video/mp4"></video>
+    <!--type='video/mp4;codecs="avc1.42E01E"'--> 
+
 
 
 
