--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video width="850" height="480" id="video" muted playsinline src="./plane.mp4" type="video/mp4"　poster="hatena.jpg"></video>
+<video width="850" height="480" id="video" muted playsinline src="https://overlaysima.netlify.com/plane.mp4" type="video/mp4"　poster="hatena.jpg"></video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
 
