--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
 
 </div>
 
+<input type="button" value="play" id="btn">
+
 
 <!--//元素材--上下重ね動画-->
 <canvas  width="850" height="960" id="buffer"></canvas>
