--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
 <canvas  width="850" height="960" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video poster="./hatena.jpg" width="850" height="480" id="video" muted playsinline src="https://overlaysima.netlify.com/plane.mp4" type="video/mp4"></video>
+<video poster="./hatena.jpg" width="850" height="480" id="video" muted playsinline >
+<source src="https://overlaysima.netlify.com/plane.mp4" type="video/mp4">
+<source src="https://overlaysima.netlify.com/plane.webm" type="video/webm">
+  sorry!
+</video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
 
