--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 <!--overlay動画-->
 <video poster="./hatena.jpg" width="850" height="480" id="video" muted playsinline >
-<source src="https://overlaysima.netlify.com/CXM_SmartPhone01_1.5mb" type="video/mp4">
+<source src="https://overlaysima.netlify.com/CXM_SmartPhone01_1.5mb.mp4" type="video/mp4">
 <!--source src="https://overlaysima.netlify.com/plane.webm" type="video/webm"-->
   sorry!
 </video>
