--- a/index.html
+++ b/index.html
@@ -58,12 +58,12 @@
 
 <div id="ov">
 <!--overlay動画output-->
-<canvas class="video__output " width="400" height="300" id="output"></canvas>
+<canvas class="video__output  id="output"></canvas>
 
 <!--背景動画。カメラ-->
 
 <div id="bk">
-<video width="400" height="300"  muted playsinline id="bgvideo"></video>
+<video   muted playsinline id="bgvideo"></video>
 </div>
 </div>
 
@@ -73,13 +73,12 @@
 
 
 <!--//元素材--上下重ね動画-->
-<canvas  width="400" height="300" id="buffer"></canvas>
+<canvas   id="buffer"></canvas>
 
 <!--overlay動画-->
-<video poster="./hatena.jpg" width="400" height="300" id="video" muted playsinline >
+<video poster="./hatena.jpg"  id="video" muted playsinline >
 <source src="https://overlaysima.netlify.com/plane.mp4" type="video/mp4">
-<!--source src="https://overlaysima.netlify.com/plane.webm" type="video/webm"-->
-  sorry!
+<p>sorry!</p>
 </video>
     <!--type='video/mp4;codecs="avc1.42E01E"'-->
 
