--- a/index.html
+++ b/index.html
@@ -53,17 +53,16 @@
 </head>
 
 <body>
-<input type="button" value="play" id="btnn">
 <div id="group">
 
 <div id="ov">
 <!--overlay動画output-->
-<canvas class="video__output  id="output"></canvas>
+<canvas class="video__output " width="400" height="300" id="output"></canvas>
 
 <!--背景動画。カメラ-->
 
 <div id="bk">
-<video   muted playsinline id="bgvideo"></video>
+<video width="400" height="300"  muted playsinline id="bgvideo"></video>
 </div>
 </div>
 
@@ -73,10 +72,10 @@
 
 
 <!--//元素材--上下重ね動画-->
-<canvas   id="buffer"></canvas>
+<canvas  width="400" height="300" id="buffer"></canvas>
 
 <!--overlay動画-->
-<video poster="./hatena.jpg"  id="video" muted playsinline >
+<video poster="./hatena.jpg" width="400" height="300" id="video" muted playsinline >
 <source src="https://overlaysima.netlify.com/plane.mp4" type="video/mp4">
 <p>sorry!</p>
 </video>
