--- a/index.html
+++ b/index.html
@@ -30,7 +30,15 @@
         position: absolute;
         margin: auto;
         z-index:1;
-
+      }
+      #output
+      {
+        z-index:2;
+      }
+      #bgvideo
+      {
+        z-index:1;
+      }
 
 
 </style>
